--- a/src/main/resources/assets/someusefulthings/lang/en_US.lang
+++ b/src/main/resources/assets/someusefulthings/lang/en_US.lang
@@ -9,6 +9,8 @@ item.compressedDiamondSword.name=Compressed Diamond Sword(Craft Only)
 
 //block
 tile.removeEnchantment.name=Remove Enchantment
+tile.reinforcementMachine.name=Reinforcement Machine
+tile.copyEnchantment.name=Copy Enchantment
 
 //achievement
 achievement.someusefulthings.infinity=Kill Creative
@@ -16,3 +18,6 @@ achievement.someusefulthings.infinity.desc=Kill a player is CreativeMode
 
 //damagesource
 death.attack.infinity=%s was dead because of a infinity attack! 
+
+//gui
+gui.PortableInventory=Backpack
